# codecrafters-shell-cpp

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  vcpkg.json  your_program.sh
src/: builtin_command.cpp  builtin_command.h  builtin_registry.cpp  builtin_registry.h  echo.cpp  echo.h  exec_external_comm.cpp  exec_external_comm.h  exit.cpp  exit.h  helper.cpp  helper.h  main.cpp  shell.cpp  shell.h  type.cpp  type.h
src/commands/: executor.cpp  executor.h
src/commands/builtin/: command.cpp  command.h  complete.cpp  complete.h  echo.cpp  echo.h  exit.cpp  exit.h  history.cpp  history.h  jobs.cpp  jobs.h  registry.cpp  registry.h  type.cpp  type.h
src/commands/error/: err_not_found.cpp  err_not_found.h
src/helper/: filesystem.cpp  filesystem.h
src/output/: console_error.cpp  console_error.h  console_output.cpp  console_output.h  output.cpp  output.h  output_type.h  redirect_err_out.cpp  redirect_err_out.h  redirect_std_err.cpp  redirect_std_err.h  redirect_std_out.cpp  redirect_std_out.h  redirect_stderr.cpp  redirect_stderr.h  redirect_stdout.cpp  redirect_stdout.h
src/parser/: ast.h  double_quotes.cpp  double_quotes.h  lexer.cpp  lexer.h  parser.cpp  parser.h  single_quotes.cpp  single_quotes.h  specialized_parser.cpp  specialized_parser.h  token.h  token_parser.cpp  token_parser.h
src/registries/: complete.cpp  complete.h  history.cpp  history.h  jobs.cpp  jobs.h
